# graphexecutor

./: .gitignore  README.md  actions.py  graphbuilder.py  graphexecutor.py  pyproject.toml
.github/workflows/: build-test.yml  deploy.yml
src/examples/: actions2.py  runcard.yaml
src/graphexecutor/: app.py  builder.py  checker.py  config.py  graphbuilder.py  graphchecker.py  graphexecutor.py  graphrunner.py  parser.py  runcard_parser.py  runner.py
src/graphexecutor/tests/: test_app.py
src/reportengine/: actions.py  config.py  graphbuilder.py  graphchecker.py  graphexecutor.py  script.py
src/reportengine/runcards/: runcard.yaml
