[tool.poetry]
name = "graphexecutor"
version = "0.1.0"
description = "Graphed based execution of Python paradigms"
authors = ["siranipour <si292@cam.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
dask = "^2021.8.1"
networkx = "^2.6.2"
click = "^8.0.1"
rich = "^10.9.0"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ge = "graphexecutor.app:main"
