[tool.poetry]
name = "graphexecutor"
version = "0.1.4"
description = "Graphed based execution of Python paradigms"
authors = ["siranipour <si292@cam.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
dask = "*"
networkx = "*"
click = "*"
rich = "*"
matplotlib = "*"
numpy="<2.0.0"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ge = "graphexecutor.app:main"
